k8s/nestjs-chat-sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-chat-sample-deployment
  labels:
    app: nestjs-chat-sample
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nestjs-chat-sample
  template:
    metadata:
      labels:
        app: nestjs-chat-sample
    spec:
      containers:
      - name: nestjs-chat-sample
        image: nestjs-chat-sample
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nestjs-chat-sample-service
  labels:
    app: nestjs-chat-sample
spec:
  type: NodePort
  selector:
    app: nestjs-chat-sample
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
